<resources>
    <string name="app_name">Math Quiz For Kids</string>
    <string name="action_settings">Settings</string>
    <string name="number_of_choices">Number of Choices</string>
    <string name="number_of_choices_description">Display 2, 4, 6 or 8 guess buttons</string>
    <string name="world_regions">Regions</string>
    <string name="world_regions_description">Regions to include in the quiz</string>
    <string name="guess_country">Guess the Right Answer, Please</string>
    <string name="results">%1$d guesses, %2$.02f%% correct</string>
    <string name="incorrect_answer">Incorrect!</string>
    <string name="default_region_message">One region must be selected. Setting North America as the default region</string>
    <string name="restarting_quiz">Quiz will restart with your new settings</string>
    <string name="question">Question %1$d of %2$d</string>
    <string name="reset_quiz">Reset Quiz</string>
    <string name="image_description">Image of the current math question in the quiz</string>
    <string name="default_region">North_America</string>
    <string name="title_activity_settings">Settings</string>
    <string name="adding_text">Adding</string>
    <string name="till_ten">till 10</string>
    <string name="till_twenty">till 20</string>
    <string name="till_hundred">till 100</string>
    <string name="subtraction_text">Subtraction</string>
    <string name="multiplication_text">Multiplication</string>
    <string name="division_text">Division</string>
    <string name="adding_and_subtraction_text">Adding and Subtraction</string>
    <string name="multiplication_and_division_text">Multiplication and Division</string>
    <string name="inequalities_text">Inequalities</string>
    <string name="second_table">Multiply by 2</string>
    <string name="third_table">Multiply by 3</string>
    <string name="fourth_table">Multiply by 4</string>
    <string name="fiveth_table">Multiply by 5</string>
    <string name="sixth_table">Multiply by 6</string>
    <string name="seventh_table">Multiply by 7</string>
    <string name="eightth_table">Multiply by 8</string>
    <string name="nineth_table">Multiply by 9</string>
    <string name="tenth_table">Multiply by 10</string>
    <string name="random_table">Multiply by random</string>
    <string name="Chose_text">Please, choose your settings for quiz</string>
    <string name="let_play">Let\'s play</string>
    <string name="no_operation">Please, choose operation</string>
    <string name="no_limits">Please, choose bound for the chosen operation</string>
    <string name="choosen_setting">You have chosen such operation as </string>
    <string name="till">till </string>
    <string name="by">by </string>

</resources>
