<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/spacing"
    tools:context="com.shtainyky.mathquizforkids.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/questionNumberTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/spacing"
        android:text="@string/question" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/Num1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/spacing"
            android:layout_toStartOf="@+id/sign"
            android:gravity="center_vertical"
            android:text="N1"
            android:textColor="@color/colorAccent"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginRight="@dimen/spacing"
            android:layout_toLeftOf="@+id/sign" />

        <TextView
            android:id="@+id/Num2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/spacing"
            android:layout_toEndOf="@+id/sign"
            android:gravity="center_vertical"
            android:text="N2"
            android:textColor="@color/colorAccent"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/spacing"
            android:layout_toRightOf="@+id/sign" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/imageView"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_centerVertical="false"
            android:gravity="center_vertical"
            android:text="+"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/answer_size"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:contentDescription="@string/image_description"
            android:scaleType="fitXY"
            android:src="@drawable/image"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/guessAnswerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/guess_country"
        android:layout_marginBottom="@dimen/spacing"/>

    <LinearLayout
        android:id="@+id/row1LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:textColor="@color/button_text_color"
            style="@android:style/Widget.Button"
            android:id="@+id/button2" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Button"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Button"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            android:id="@+id/button"
            style="@android:style/Widget.Button"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="2"
            style="@android:style/Widget.Button"/>
    </LinearLayout>


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/answerTextView"
    android:layout_gravity="bottom|center_horizontal"
    android:gravity="center_horizontal"
    android:textStyle="bold"
    android:textSize="@dimen/answer_size"/>

</LinearLayout>
